--- a/src/Pages/Styles/locationItemPage.css
+++ b/src/Pages/Styles/locationItemPage.css
@@ -5,8 +5,14 @@
     background-color: var(--lightBackground);
 }
 
+.locationItemPage .logo {
+    width: 200px;
+    padding-top: 1em;
+    margin: 0 0 1em 0.5em;
+}
+
 .locationItemPage .backBtn {
-    top: 1em;
+    top: 4em;
     left: 1em;
     cursor: pointer;
     position: absolute;
